# bitoguard-hackathon

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  bitoguard.jsx  compose.yaml  postman_collection.json
bitoguard_core/: .dockerignore  .gitignore  Dockerfile  Dockerfile.training  OFFICIAL_EXPERIMENT_SUMMARY_20260319.md  README.md  config.py  hardware.py  oracle_client.py  pyproject.toml  requirements.txt  source_client.py
bitoguard_core/api/: main.py
bitoguard_core/artifacts/: demo_script.md  official_bundle.json  validation_report.json
bitoguard_core/db/: schema.py  store.py
bitoguard_core/features/: build_features.py  build_features_v2.py  crypto_features.py  graph_bipartite.py  graph_features.py  ip_features.py  profile_features.py  registry.py  rule_features.py  twd_features.py
bitoguard_core/ml_pipeline/: __init__.py  artifact_manager.py  config_loader.py  feature_store.py  model_approval.py  preprocessing_entrypoint.py  sagemaker_e15_train.py  serve_e15.py  train_entrypoint.py
bitoguard_core/models/: anomaly.py  common.py  dormancy.py  eval_oof.py  rule_engine.py  run_user_holdout_model_family_benchmark.py  score.py  stacker.py  train.py  train_catboost.py  validate.py
bitoguard_core/official/: __init__.py  anomaly.py  bundle.py  cohorts.py  common.py  experiment_tracker.py  features.py  generate_submission.py  graph_features.py  graph_model.py  gru_model.py  hpo.py  inner_fold_selection.py  modeling.py  modeling_xgb.py  nested_hpo.py  pipeline.py  rules.py  runtime.py  score.py  splitters.py  stacking.py  train.py  transductive_features.py  (+1 more)
(+193 files in other folders)
